ci: docker login 변수 설정

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Login docker registry
-      run: docker login -u $(username) -p $(password)
+      run: docker login -u ${{ secrets.USERNAME }} -p ${{ secrets.PASSWORD }}
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag choistory-apiserver.kr.ncr.ntruss.com/choistory:$(date +%s)
     - name: Push the Docker image
