--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,8 +10,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Login docker registry
-      run: docker login choistory-apiserver.kr.ncr.ntruss.com -u ${{ secrets.USERNAME }} -p ${{ secrets.PASSWORD }}
+      run: docker login choistory.kr.ncr.ntruss.com -u ${{ secrets.USERNAME }} -p ${{ secrets.PASSWORD }}
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag choistory-apiserver.kr.ncr.ntruss.com/choistory:$GITHUB_RUN_ID
+      run: docker build . --file Dockerfile --tag choistory.kr.ncr.ntruss.com/choistory-api:$GITHUB_RUN_ID
     - name: Push the Docker image
-      run: docker push choistory-apiserver.kr.ncr.ntruss.com/choistory:$GITHUB_RUN_ID
+      run: docker push choistory.kr.ncr.ntruss.com/choistory-api:$GITHUB_RUN_ID
