--- a/src/main/resources/kubernetes/api-server.yaml
+++ b/src/main/resources/kubernetes/api-server.yaml
@@ -1,3 +1,14 @@
+apiVersion: v1
+kind: Secret
+metadata:
+  name: mysql-root-pass
+type: Opaque
+data:
+  password: bXktc2VjcmV0
+
+
+---
+
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
