ci: imagePullSecrest 추가

--- a/src/main/resources/kubernetes/api-server.yaml
+++ b/src/main/resources/kubernetes/api-server.yaml
@@ -84,6 +84,8 @@ spec:
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: k8s
+      imagePullSecrets:
+        - name: regcred
 
 ---
 
