--- a/build.gradle
+++ b/build.gradle
@@ -22,20 +22,27 @@ repositories {
 }
 
 dependencies {
+    // ===== Spring Packages ===== //
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'com.mysql:mysql-connector-j'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     // implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 
-
-    compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    annotationProcessor 'org.projectlombok:lombok'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // ===== Third Party Packages ===== //
+
+    implementation 'com.mysql:mysql-connector-j'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+
 }
 bootJar {
     archiveBaseName = 'choistory'
@@ -43,6 +50,6 @@ bootJar {
     archiveVersion = '0.0.1'
 }
 
-// tasks.named('test') {
-//     useJUnitPlatform()
-// }
+ tasks.named('test') {
+     useJUnitPlatform()
+ }
