fix: set database

--- a/src/main/resources/config/application-k8s.yaml
+++ b/src/main/resources/config/application-k8s.yaml
@@ -4,6 +4,6 @@ spring:
       on-profile: k8s
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://mysql-service:3306?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://mysql-service:3306/choistory?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
     username: root
     password: my-secret
