--- a/src/main/resources/config/application-local-docker.yaml
+++ b/src/main/resources/config/application-local-docker.yaml
@@ -4,6 +4,6 @@ spring:
       on-profile: local-docker
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://172.17.0.3:3306?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://172.17.0.3:3306/choistory?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
     username: root
     password: 1234
