refactor: PR#17 피드백 반영

--- a/src/main/resources/config/application-k8s.yaml
+++ b/src/main/resources/config/application-k8s.yaml
@@ -6,12 +6,12 @@ spring:
     source:
       hikari:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://mysql-service:3306/choistory?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+        jdbcUrl: jdbc:mysql://mysql-service:3306/choistory?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
         username: root
         password: my-secret
     replica:
       hikari:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://mysql-service:3307/choistory?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+        jdbcUrl: jdbc:mysql://mysql-service:3307/choistory?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
         username: root
         password: my-secret
