--- a/src/main/resources/config/application-local-docker.yaml
+++ b/src/main/resources/config/application-local-docker.yaml
@@ -6,12 +6,12 @@ spring:
     source:
       hikari:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://172.17.0.3:3306/choistory?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+        jdbcUrl: jdbc:mysql://172.17.0.3:3306/choistory?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
         username: root
         password: 1234
     replica:
       hikari:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://172.17.0.4:3306/choistory?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+        jdbcUrl: jdbc:mysql://172.17.0.4:3306/choistory?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
         username: root
         password: 1234
