--- a/src/main/resources/config/application-local-docker.yaml
+++ b/src/main/resources/config/application-local-docker.yaml
@@ -15,3 +15,8 @@ spring:
         jdbcUrl: jdbc:mysql://172.17.0.4:3306/choistory?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
         username: root
         password: 1234
+  cache:
+    type: redis
+    redis:
+      host: 172.17.0.5
+      port: 6379
