--- a/src/main/resources/config/application-local.yaml
+++ b/src/main/resources/config/application-local.yaml
@@ -15,3 +15,9 @@ spring:
         jdbcUrl: jdbc:mysql://localhost:3307/choistory?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
         username: root
         password: 1234
+  cache:
+    type: redis
+  data:
+    redis:
+      host: localhost
+      port: 6379
